--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,3 +7,5 @@
 @import './components/header';
 @import './components/hero';
 @import './components/about';
+@import './components/process';
+@import './components/service';
