--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -44,6 +44,11 @@
     background-color: transparent;
     display: none;
 
+    & img {
+        width: 50px;
+        height: 50px;
+    }
+
     @media screen and (max-width:1200px) {
         display: block;
     }
