--- a/sass/index.scss
+++ b/sass/index.scss
@@ -9,3 +9,6 @@
 @import './components/about';
 @import './components/process';
 @import './components/service';
+@import './components/modal';
+@import './components/useful';
+@import './components/article';
