--- a/sass/components/_process.scss
+++ b/sass/components/_process.scss
@@ -152,22 +152,23 @@
 
 .process__item {
     padding-left: 43px;
-    background-image: url(../img/icons/blue-circle.png), url(../img/icons/white-ball.png);
+    background-image: url(../img/icons/white-bullet.png);
+    background-size: 18px;
     background-repeat: no-repeat;
-    background-position: top 6.7px left 2.15px, top 5px left;
+    background-position: top 6px left;
 
     @media screen and (max-width:1200px) {
         text-align: center;
         padding-left: 0;
         padding-top: 23px;
-        background-position: top 1.5px center, top center;
+        background-position: top center;
     }
 
     @media screen and (max-width:767px) {
         padding-top: 0;
         padding-left: 37px;
         text-align: left;
-        background-position: top 1.4px left 2.15px, top left;
+        background-position: top left;
     }
 }
 
