--- a/sass/components/_service.scss
+++ b/sass/components/_service.scss
@@ -53,8 +53,8 @@
     background-color: transparent;
     padding: 36px 0 39px 0;
 
-    background-color: #F4F4F4;
-    background-image: url(../img/icons/bottom-arrow.svg);
+    background-color: #242451;
+    background-image: url(../img/icons/bottom-arrow-white.svg);
     background-repeat: no-repeat;
     background-position: top 55px right 60px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
@@ -71,7 +71,7 @@
         font-family: 'Merriweather';
         font-size: 40px;
         line-height: 1.25;
-        color: #242451;
+        color: var(--primary-text-color);
         transition-duration: 300ms;
         padding-left: 30px;
 
@@ -86,7 +86,7 @@
         font-weight: 500;
         font-size: 30px;
         line-height: 1.16;
-        color: var(--black-text-color);
+        color: var(--primary-text-color);
         transition-duration: 300ms;
 
         @media screen and (max-width:1200px) {
@@ -151,7 +151,7 @@
         font-weight: 500;
         font-size: 40px;
         line-height: 1.16;
-        color: var(--white-text-color);
+        color: #242451;
 
         span {
             margin-left: 28px;
@@ -180,7 +180,7 @@
         align-items: center;
         justify-content: center;
         padding: 26px 104px;
-        background: #F4F4F4;
+        background: #242451;
         box-shadow: 4px 4px 10px rgba(255, 255, 255, 0.25);
         border-radius: 20px;
         cursor: pointer;
@@ -188,7 +188,7 @@
         font-family: 'Roboto';
         font-size: 25px;
         line-height: 1.16;
-        color: var(--black-text-color);
+        color: var(--primary-text-color);
 
         @media screen and (max-width:1200px) {
             padding: 21px 51px;
@@ -198,8 +198,8 @@
 }
 
 .service__button.active {
-    background-color: #242451;
-    background-image: url(../img/icons/bottom-arrow-white.svg);
+    background-color: #F4F4F4;
+    background-image: url(../img/icons/bottom-arrow.svg);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     padding-bottom: 73px;
 
@@ -208,11 +208,11 @@
     }
 
     .service__number {
-        color: var(--primary-text-color);
+        color: #242451;
     }
 
     .service__subtitle {
-        color: var(--primary-text-color);
+        color: #242451;
     }
 
     .service__border {
@@ -252,7 +252,7 @@
     font-weight: 500;
     font-size: 25px;
     line-height: 1.16;
-    color: var(--primary-text-color);
+    color: #242451;
     text-align: left;
     margin-bottom: 21px;
 
@@ -271,7 +271,7 @@
 .calc__item {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #F4F4F4;
+    border-bottom: 1px solid #242451;
     padding-bottom: 9px;
 
     @media screen and (max-width:767px) {
@@ -280,16 +280,41 @@
 }
 
 .calc__agree {
-    width: 15px;
-    height: 15px;
+    position: relative;
+    width: 0;
+    height: 0;
     cursor: pointer;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: -7px;
+        left: 0;
+        width: 15px;
+        height: 15px;
+        background-color: #242451;
+        border-radius: 1px;
+
+        @media screen and (max-width:767px) {
+            top: 1.5px;
+        }
+    }
+
+    &:checked {
+        &::before {
+            background-image: url(../img/icons/agree.svg);
+            background-repeat: no-repeat;
+            background-size: 11px;
+            background-position: center center;
+        }
+    }
 }
 
 .calc__name {
     font-size: 20px;
     line-height: 1.16;
-    color: var(--white-text-color);
-    margin-left: 25px;
+    color: #242451;
+    margin-left: 40px;
     text-align: left;
     max-width: 850px;
 
@@ -298,7 +323,7 @@
     }
 
     @media screen and (max-width:767px) {
-        margin-left: 10px;
+        margin-left: 30px;
         font-size: 16px;
         width: calc(100% - 25px);
     }
@@ -309,11 +334,12 @@
     margin-left: auto;
     font-size: 20px;
     line-height: 1.16;
-    color: var(--white-text-color);
+    color: #242451;
     text-align: left;
 
     @media screen and (max-width:767px) {
         font-size: 16px;
-        margin-left: 25px;
+        margin-left: 30px;
+        margin-top: 4px;
     }
 }
