--- a/sass/components/_useful.scss
+++ b/sass/components/_useful.scss
@@ -55,6 +55,7 @@
 
 .useful__image {
     max-width: 100%;
+    height: auto;
     border-radius: 12px;
     margin-bottom: 41px;
 
@@ -114,6 +115,7 @@
 }
 
 .useful__full {
+    z-index: 2;
     margin-top: auto;
     display: flex;
     align-items: center;
