--- a/sass/index.scss
+++ b/sass/index.scss
@@ -12,3 +12,6 @@
 @import './components/modal';
 @import './components/useful';
 @import './components/article';
+@import './components/contact';
+@import './components/review';
+@import './components/footer';
