--- a/css/index.css
+++ b/css/index.css
@@ -200,7 +200,44 @@ body {
 @media screen and (max-width: 767px) {
   .container {
     max-width: 318px;
-    padding: 0;
+    padding: 0 5px;
+  }
+}
+
+.scroll__top {
+  position: fixed;
+  z-index: 1000000;
+  bottom: 50px;
+  right: 50px;
+  background-color: #FFFFFF;
+  background-image: url(../img/icons/arrow-top.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  border: 1px solid #242451;
+  border-radius: 50%;
+  transition-duration: 300ms;
+  transition-property: opacity, visibility;
+  width: 120px;
+  height: 120px;
+  opacity: 0;
+  visibility: hidden;
+}
+@media screen and (max-width: 1200px) {
+  .scroll__top {
+    bottom: 25px;
+    right: 25px;
+    width: 80px;
+    height: 80px;
+    background-size: 20px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .scroll__top {
+    bottom: 15px;
+    right: 15px;
+    width: 50px;
+    height: 50px;
+    background-size: 12px;
   }
 }
 
@@ -1239,6 +1276,7 @@ body {
 
 .useful__image {
   max-width: 100%;
+  height: auto;
   border-radius: 12px;
   margin-bottom: 41px;
 }
@@ -1305,6 +1343,7 @@ body {
 }
 
 .useful__full {
+  z-index: 2;
   margin-top: auto;
   display: flex;
   align-items: center;
@@ -1396,6 +1435,7 @@ body {
 @media screen and (max-width: 1370px) {
   .article__image {
     width: 800px;
+    height: auto;
   }
 }
 @media screen and (max-width: 1200px) {
@@ -1549,5 +1589,432 @@ body {
   .article__footer {
     margin-top: 30px;
     font-size: 20px;
+  }
+}
+
+.contact {
+  position: relative;
+  padding: 90px 0;
+}
+.contact .container {
+  max-width: 844px;
+  padding: 0;
+}
+@media screen and (max-width: 1200px) {
+  .contact {
+    padding: 60px 0 406px 0;
+    background-image: url(../img/section/contact/bg-contact-m.png);
+    background-repeat: no-repeat;
+    background-size: 365px;
+    background-position: bottom center;
+  }
+  .contact .container {
+    max-width: 677px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .contact {
+    background-image: url(../../img/section/contact/bg-contact-s.png);
+    background-size: 197px;
+    padding: 50px 0 224px;
+  }
+  .contact .container {
+    max-width: 318px;
+  }
+}
+
+.contact__background {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+@media screen and (max-width: 1200px) {
+  .contact__background {
+    display: none;
+  }
+}
+
+.contact__title {
+  font-family: "Merriweather";
+  font-size: 60px;
+  line-height: 1.25;
+  color: #252525;
+  text-align: center;
+  margin-bottom: 76px;
+}
+@media screen and (max-width: 1200px) {
+  .contact__title {
+    font-size: 40px;
+    margin-bottom: 42px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .contact__title {
+    font-size: 35px;
+    margin-bottom: 22px;
+  }
+}
+
+.contact__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+@media screen and (max-width: 1200px) {
+  .contact__content {
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .contact__content {
+    gap: 30px;
+  }
+}
+
+.contact__phone {
+  z-index: 2;
+}
+.contact__phone p {
+  font-size: 30px;
+  line-height: 1.16;
+  color: var(--black-text-color);
+  margin-bottom: 20px;
+}
+.contact__phone a {
+  font-family: "Roboto";
+  font-size: 25px;
+  line-height: 1.16;
+  color: #242451;
+}
+@media screen and (max-width: 1200px) {
+  .contact__phone {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 767px) {
+  .contact__phone p {
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+  .contact__phone a {
+    font-size: 20px;
+  }
+}
+
+.contact__form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+@media screen and (max-width: 1200px) {
+  .contact__form {
+    align-items: center;
+  }
+}
+
+.contact__input {
+  padding: 15px 45px;
+  background-color: transparent;
+  border: 1px solid #242451;
+  border-radius: 10px;
+  font-family: "Roboto";
+  font-size: 25px;
+  line-height: 1.16;
+  color: #252525;
+}
+.contact__input::-moz-placeholder {
+  color: #252525;
+}
+.contact__input::placeholder {
+  color: #252525;
+}
+@media screen and (max-width: 767px) {
+  .contact__input {
+    width: 319px;
+    padding: 19px 37px;
+    font-size: 20px;
+  }
+}
+
+.contact__submit {
+  padding: 26px 0;
+  width: 332px;
+  text-align: center;
+  background: #242451;
+  box-shadow: 4px 4px 10px rgba(255, 255, 255, 0.25);
+  border-radius: 20px;
+  margin-top: 10px;
+  font-family: "Roboto";
+  font-size: 25px;
+  line-height: 1.16;
+  color: var(--primary-text-color);
+  cursor: pointer;
+}
+@media screen and (max-width: 767px) {
+  .contact__submit {
+    margin-top: 0;
+    font-size: 20px;
+    width: 290px;
+    padding: 24px 0;
+  }
+}
+
+.review {
+  padding: 90px 0 188px 0;
+  background-color: #242451;
+}
+@media screen and (max-width: 1200px) {
+  .review {
+    padding: 60px 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .review {
+    padding: 50px 0;
+  }
+}
+
+.review__title {
+  font-family: "Merriweather";
+  font-size: 60px;
+  line-height: 1.25;
+  color: var(--primary-text-color);
+  text-align: center;
+  margin-bottom: 54px;
+}
+@media screen and (max-width: 1200px) {
+  .review__title {
+    font-size: 40px;
+    margin-bottom: 42px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .review__title {
+    font-size: 35px;
+    margin-bottom: 22px;
+  }
+}
+
+.review__list {
+  display: flex;
+  gap: 80px;
+}
+@media screen and (max-width: 1200px) {
+  .review__list {
+    flex-direction: column;
+    gap: 30px;
+    width: 400px;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .review__list {
+    width: 100%;
+    gap: 20px;
+  }
+}
+
+.review__item {
+  background-color: #F4F4F4;
+  width: calc((100% - 160px) / 3);
+  padding: 23px 17px 41px 30px;
+  border-radius: 10px;
+}
+@media screen and (max-width: 1200px) {
+  .review__item {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .review__item {
+    padding: 28px 38px 28px 21px;
+  }
+}
+
+.review__profile {
+  display: flex;
+  gap: 37px;
+  align-items: center;
+  margin-bottom: 37px;
+}
+@media screen and (max-width: 767px) {
+  .review__profile {
+    gap: 43px;
+    margin-bottom: 25px;
+  }
+}
+
+.profile__image {
+  border-radius: 50%;
+}
+@media screen and (max-width: 1370px) {
+  .profile__image {
+    width: 80px;
+    height: 80px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .profile__image {
+    width: 128px;
+    height: 128px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .profile__image {
+    width: 82px;
+    height: 82px;
+  }
+}
+
+.profile__name {
+  font-size: 30px;
+  line-height: 1.16;
+  color: var(--black-text-color);
+}
+@media screen and (max-width: 767px) {
+  .profile__name {
+    font-size: 25px;
+  }
+}
+
+.review__text {
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--black-text-color);
+}
+@media screen and (max-width: 767px) {
+  .review__text {
+    font-size: 16px;
+  }
+}
+
+.footer {
+  padding: 114px 0 163px 0;
+}
+.footer .container {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  padding-right: 233px;
+  padding-left: 104px;
+}
+@media screen and (max-width: 1370px) {
+  .footer .container {
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .footer {
+    padding: 36px 0 60px 0;
+  }
+  .footer .container {
+    flex-direction: column;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer {
+    padding: 50px 0;
+  }
+}
+
+.footer__contact {
+  display: flex;
+  flex-direction: column;
+  gap: 17px;
+  margin-right: 165px;
+}
+.footer__contact p {
+  font-size: 30px;
+  line-height: 1.15;
+  color: var(--black-text-color);
+}
+.footer__contact a {
+  font-family: "Roboto";
+  font-size: 25px;
+  line-height: 1.16;
+  color: #242451;
+}
+@media screen and (max-width: 1370px) {
+  .footer__contact {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .footer__contact {
+    align-items: center;
+    margin-bottom: 47px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer__contact {
+    gap: 10px;
+    margin-bottom: 25px;
+  }
+  .footer__contact p {
+    font-size: 25px;
+  }
+  .footer__contact a {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .footer__logo {
+    display: none;
+  }
+}
+
+.footer__logo_mob {
+  display: none;
+  width: 147px;
+  height: 149px;
+  margin-bottom: 17px;
+}
+@media screen and (max-width: 1200px) {
+  .footer__logo_mob {
+    display: block;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer__logo_mob {
+    width: 81px;
+    height: 82px;
+    margin-bottom: 20px;
+  }
+}
+
+.footer__lang {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+  margin-left: auto;
+}
+.footer__lang a {
+  font-family: "Roboto";
+  font-size: 64px;
+  line-height: 1.16;
+  color: var(--black-text-color);
+}
+@media screen and (max-width: 1370px) {
+  .footer__lang {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .footer__lang {
+    flex-direction: row;
+    gap: 127px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer__lang {
+    flex-direction: column;
+    gap: 14px;
+  }
+  .footer__lang a {
+    font-size: 40px;
   }
 }/*# sourceMappingURL=index.css.map */
