--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -17,6 +17,43 @@ body {
 
     @media screen and (max-width:767px) {
         max-width: 318px;
-        padding: 0;
+        padding: 0 5px;
+    }
+}
+
+.scroll__top {
+    position: fixed;
+    z-index: 1000000;
+    bottom: 50px;
+    right: 50px;
+    background-color: #FFFFFF;
+    background-image: url(../img/icons/arrow-top.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    border: 1px solid #242451;
+    border-radius: 50%;
+    transition-duration: 300ms;
+    transition-property: opacity, visibility;
+
+    width: 120px;
+    height: 120px;
+
+    opacity: 0;
+    visibility: hidden;
+
+    @media screen and (max-width:1200px) {
+        bottom: 25px;
+        right: 25px;
+        width: 80px;
+        height: 80px;
+        background-size: 20px;
+    }
+
+    @media screen and (max-width:767px) {
+        bottom: 15px;
+        right: 15px;
+        width: 50px;
+        height: 50px;
+        background-size: 12px;
     }
 }
