--- a/sass/components/_article.scss
+++ b/sass/components/_article.scss
@@ -62,6 +62,7 @@
 
     @media screen and (max-width:1370px) {
         width: 800px;
+        height: auto;
     }
 
     @media screen and (max-width:1200px) {
