--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -20,7 +20,7 @@
     }
 
     @media screen and (max-width:767px) {
-        background-image: url(../../img/section/contact/bg-contact-s.png);
+        background-image: url(../img/section/contact/bg-contact-s.png);
         background-size: 197px;
         padding: 50px 0 224px;
 
