--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -23,7 +23,7 @@ body {
 
 .scroll__top {
     position: fixed;
-    z-index: 1000000;
+    z-index: 90;
     bottom: 50px;
     right: 50px;
     background-color: #FFFFFF;
