--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -149,6 +149,7 @@
     border-radius: 20px;
     margin-top: 10px;
 
+    font-weight: 400;
     font-family: 'Roboto';
     font-size: 25px;
     line-height: 1.16;
