--- a/sass/components/_process.scss
+++ b/sass/components/_process.scss
@@ -104,7 +104,7 @@
     font-weight: 400;
     font-size: 25px;
     line-height: 1.16;
-    color: var(black-text-color);
+    color: var(--black-text-color);
 
     @media screen and (max-width:1200px) {
         margin: 0 auto;
